Issue #1 - Added support for Java 17. Updated several dependencies as support for Jakarta EE 10 is further along.